# learn-claude-code

./: CLAUDE.md  PROJECT_ENHANCEMENT_PLAN.md  feishu_agent_harness_guide.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
agents/harness/: __init__.py  config.py  evaluation.py  observability.py  resilience.py  security.py
tests/: conftest.py  test_integration.py  test_unit.py
